# OuRAGboros

./: .default.env  .dockerignore  .env  .gitignore  .kubernetes.env  AUTO_LOG_EVAL_FEATURE.md  CLAUDE.md  Dockerfile  ENV_README.md  README.md  chunk.py  docker-compose.gpu.yml  docker-compose.local.yml  docker-compose.yml  k8s.yaml  kustomization.yaml  pyproject.toml  run_apps.sh  run_apps_auto.sh  run_apps_production.sh  streaming_test.html
docker-compose/: values.yaml
docs/: AUTO_LOG_EVAL_FEATURE.md  BENCHMARK-FRAMEWORK-README.md  CONCURRENCY-BENCHMARK-HANDOFF.md  DEPLOYMENT-SUMMARY.md  LLM-BOTTLENECK-MITIGATION-PLAN.md  MULTI_MODEL_SUPPORT.md  S3DF-DEPLOYMENT-GUIDE.md  SESSION-SUMMARY.md
scripts/: README.md  benchmark-streaming-concurrency.py  benchmark-systematic-simple.sh  benchmark-with-profiling.sh  benchmark-wrapper.sh  build-and-push.sh  comprehensive-pipeline-profiler.py  cpu-bound-analysis.md  deploy-image.sh  deploy-qdrant.sh  deploy-quick-fix.sh  deploy-to-s3df.sh  local-dev.sh  manage-models.sh  monitor-resources.sh  opensearch-browser.sh  plot-ttft-results.py  plot_ttft_scaling.py  production-monitor.sh  profile-resources.py  quick-cpu-bound-test.py  quick-ttft-benchmark.py  run-benchmark-docker.sh  run-with-mocks.sh  test-api-benchmark.py  test-api-service.sh  test-concurrency-systematic.sh  test-concurrent.sh  test-embedding-cache.sh  test-local.sh  test-mock-validation.py  test-streaming-concurrent.sh  test-streaming-simple.sh  test-ttft.sh  test_async_vs_sync_llm.py  test_logging.py  test_stanford_api_concurrency.py  ttft_test.py
src/: app_api.py  (+2 more)
(+70 files in other folders)
