[project]
name = "winter2025-darve"
version = "0.1.0"
description = "Python codebase for Winter 2025 Stanford ICME Research Rotation with Eric Darve."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "langchain-community>=0.3.14",
    "langchain-ollama>=0.2.2",
    "langchain-unstructured>=0.1.5",
    "nltk==3.8.1",
    "ollama>=0.4.6",
    "pandas>=2.2.3",
    "streamlit>=1.41.1",
    "unstructured[all-docs,local-inference]>=0.14.0",
]
