[project]
name = "winter2025-darve"
version = "0.1.0"
description = "Python codebase for Winter 2025 Stanford ICME Research Rotation with Eric Darve."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "datasets>=3.3.1",
    "langchain-community>=0.3.14",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.2",
    "langchain-openai>=0.3.8",
    "nltk==3.8.1",
    "ollama>=0.4.6",
    "openai>=1.66.2",
    "opensearch-py>=2.8.0",
    "pandas>=2.2.3",
    "pymupdf>=1.25.2",
    "python-levenshtein>=0.26.1",
    "streamlit>=1.41.1",
    "transformers[torch]>=4.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tools"]

[project.scripts]
chunk_pdf = "tools.chunk_pdf:main"
finetune_model = "tools.finetune:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
